# NaI_Detector

.github/workflows/: ci.yml
NaI_Detector/: CMakeLists.txt  README.md  main.cc  plot_co60_spectrum.py  run1.mac  run1_co60.mac  run2.mac  run2_co60.mac  vis.mac
NaI_Detector/include/: detector_construction.hh  event_action.hh  primary_generator_action.hh  run_action.hh  stepping_action.hh
NaI_Detector/results/: co60_peaks.txt
NaI_Detector/src/: action_initialization.cc  detector_construction.cc  event_action.cc  primary_generator_action.cc  run_action.cc  stepping_action.cc
